# Grafika3D

./: CMakeLists.txt
src/Assignments/CameraMovement/: CMakeLists.txt  app.cpp  app.h
src/Assignments/CameraMovement/shaders/: base_vs.glsl
src/Assignments/Indices/Colors/: app.cpp
src/Assignments/Indices/Colors/House/: app.cpp
src/Assignments/PVM/: app.h
src/Assignments/PVM/Resizing/Uniforms/: app.cpp
src/Assignments/PVM/Resizing/Uniforms/Pyramid/: app.cpp
src/Assignments/PVM/Resizing/Uniforms/Pyramid/shaders/: base_vs.glsl
src/Assignments/PVM/Resizing/Uniforms/shaders/: base_vs.glsl
src/Assignments/Phong/: CMakeLists.txt  app.cpp  app.h  camera.h  camera_controler.h
src/Assignments/Phong/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Textures_meshMaterials/: CMakeLists.txt  app.cpp  app.h  camera.h  main.cpp
src/Assignments/Textures_meshMaterials/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Uniforms/shaders/: base_fs.glsl
src/Assignments/Zoom/: CMakeLists.txt  app.cpp  app.h  camera.h
src/Assignments/Zoom/PVM/: app.cpp
src/Assignments/Zoom/PVM/Resizing/: app.cpp  app.h
src/Assignments/Zoom/PVM/Resizing/Uniforms/Pyramid/Indices/: app.cpp
src/Assignments/Zoom/PVM/shaders/: base_fs.glsl
src/Engine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Light.h  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  mesh_loader.cpp  mesh_loader.h  texture.cpp  texture.h
src/Engine/shaders/: color_fs.glsl  color_vs.glsl  phong_fs.glsl  phong_vs.glsl
(+1 files in other folders)
